# backup-home-rs

./: Cargo.toml  Makefile  README.md  flake.nix
src/: lib.rs  main.rs
src/backup/: linux.rs  macos.rs  mod.rs  windows.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/upload/: mod.rs
