[package]
name = "backup-home"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
dirs = "5.0"
whoami = "1.4"
librclone = "0.8"
serde_json = "1.0"
num_cpus = "1.16"
walkdir = "2.5"
glob = "0.3"
gzp = { version = "0.11", features = ["deflate_default"] }
